src/component/chat/chatting/ChattingScreen.scss
@import '../../../styles/_vars.scss';
@import '../../../styles/mixins.scss';
@import '../../shared/QuickReplies/QuickReplies.scss';

.queuePosition {
  composes: u-textCenter from global;
  margin-top: #{5/$font-size}rem;
  margin-bottom: #{10/$font-size}rem;
  color: $zd-color-grey-600;
}

.agentTyping {
  margin-top: #{8/$font-size}rem;
  margin-bottom: #{9/$font-size}rem;
  color: $zd-color-grey-600;
  width: 100%;
  background: linear-gradient(to bottom, rgba($zd-color-white, 0), rgba($zd-color-white, 0.8));
}

.agentTypingMobile {
  composes: agentTyping;
  margin-top: 0;
  margin-bottom: #{5/$font-size}rem;
}

.loadingEllipses {
  composes: u-inlineBlock from global;
  padding-right: #{2/$font-size}rem;
  margin-right: #{5/$font-size}rem;

  [dir='rtl'] & {
    margin-right: 0;
    margin-left: #{5/$font-size}rem;
  }
}

.loadingEllipsesItem {
  background-color: $zd-color-grey-300 !important;
  width: #{4/$font-size}rem;
  height: #{4/$font-size}rem;
  margin-right: #{1/$font-size}rem;
  margin-bottom: #{2/$font-size}rem;
}

.historyFetchingContainer {
  composes: u-posAbsolute u-flex u-flexAlignItemsCenter u-flexJustifyCenter from global;
  top: #{110/$font-size}rem;
  left: 0;
  right: 0;
}

.historyFetchingText {
  composes: u-backgroundWhite from global;
  color: $zd-color-grey-800;
  border-radius: #{30/$font-size}rem !important;
  box-shadow: 0 #{1/$font-size}rem #{10/$font-size}rem 0 rgba(0, 0, 0, 0.2);
  max-width: 90%;
  height: #{30/$font-size}rem;
  line-height: #{30/$font-size}rem;
  padding: 0 #{12/$font-size}rem;
}

.zendeskLogo {
  z-index: 1;
}

.zendeskLogoChatMobile {
  bottom: #{48/$font-size}rem;

  [dir='rtl'] & {
    right: #{12/$font-size}rem;
  }

  [dir='ltr'] & {
    left: #{12/$font-size}rem;
  }
}

.footer {
  box-shadow: 0 0 #{12/$font-size}rem #{8/$font-size}rem $zd-color-white;
  padding: #{8/$font-size}rem #{15/$font-size}rem !important;
}

.footerMobile {
  padding: 0 !important;
  border-top: $thin-border-size solid $zd-color-grey-200;
  margin-top: #{12/$font-size}rem !important;
}

.footerMobileWithLogo {
  margin-top: #{24/$font-size}rem !important;
}

.header {
  composes: u-marginBM from global;
  position: relative;
}

.scrollBarFix {
  overflow-y: scroll !important;
  margin-right: 0 !important;
  padding-right: #{3/$font-size}rem !important;
}

.chatLogContainer {
  min-height: calc(100% - #{$sliderHeight});
}

.chatLogContainerMobile {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.scrollContainerContent {
  height: 100%;
  max-height: none;
  margin-right: #{7/$font-size}rem !important;
  margin-left: #{7/$font-size}rem !important;
  padding-right: #{8/$font-size}rem !important;
  padding-left: #{8/$font-size}rem !important;
}

.headerMargin {
  margin-top: #{58/$font-size}rem;
}

.scrollContainerMessagesContent {
  composes: scrollContainerContent;
}

.scrollContainerMessagesContentDesktop {
  composes: scrollContainerMessagesContent;
  height: calc(100% - #{220/$font-size}rem); /* 1 */
}

.scrollBottomPill {
  height: #{30/$font-size}rem;
  padding: #{7/$font-size}rem #{15/$font-size}rem #{8/$font-size}rem !important;
  color: $zd-color-grey-800;
  bottom: #{145/$font-size}rem;
  left: 50%;
  position: fixed;
  transform: translateX(-50%);
  z-index: 2;
}

.scrollBottomPillMobile {
  composes: scrollBottomPill;
  bottom: #{60/$font-size}rem;
}

.noAgentTyping {
  height: #{26/$font-size}rem;
  width: 100%;
}

.noAgentTypingMobile {
  composes: noAgentTyping;
  height: #{14/$font-size}rem;
}

